<resources>
    <string name="app_name">CatalogueMovie</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movie Catalogue</string>
    <string name="nav_header_subtitle">www.themoviedb.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukkan_nama_film">Search Movies</string>
    <string name="cari">Search</string>
    <string name="API">"bb83bd5cf496014b1bf123c7b88809ad"</string>
    <string name="search">Search</string>
    <string name="change_language">Change Language</string>
    <string name="movies">Movies</string>
    <string name="Now_Playing">Now Playing</string>
    <string name="Coming_Soon">Coming Soon</string>
    <string name="setting">Language Preferences</string>
    <string name="lang">en-US</string>
    <string name="movie">Movie</string>
    <string name="wait">Please wait..</string>
    <string name="finished">Load Finished</string>
    <string name="movie_title">Movie Title</string>
    <string name="overview">Overview:</string>
    <string name="release_date">Release Date:  </string>
    <string name="watch_now">Watch Now</string>
    <string name="card_view">Card View</string>
    <string name="list_view">List View</string>
    <string name="movie_s_poster">Movie\'s Poster</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="add">Added to Favorite</string>
    <string name="remove">Removed from Favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">NO DATA</string>
    <string name="my_favorites">My Favorites</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="new_movie_notification">New Movie Notification</string>
    <string name="preference">Preference</string>
</resources>
