<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.PreferenceFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    >



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:paddingRight="0dp">

            <LinearLayout
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_reminder"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:paddingEnd="0dp" />

            </LinearLayout>


        </TableRow>
        <Space
            android:layout_height="10dp"/>

        <TableRow>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_movie_notification"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            </LinearLayout>
        </TableRow>
        <Space
            android:layout_height="10dp"/>

    <TableRow>
        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textStyle="bold" />
    </TableRow>

    </TableLayout>

</LinearLayout>